token-customizer-tool/src/index.css
:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  /* Päävärit */
  --color-primary: #000000; /* Musta tausta */
  --color-secondary: #FFFFFF; /* Valkoinen teksti ja elementit */
  --color-accent: #C28EF5; /* Korostusväri, esimerkiksi reunat ja painikkeet */
  
  /* Harmaan sävyt */
  --color-gray-dark: #191B1F; /* Tummin harmaa, tausta */
  --color-gray-medium: #43444B; /* Keskitumma harmaa */
  --color-gray-light: #DBE3ED; /* Vaalea harmaa, teksti */
  
  /* Muut värit */
  --color-pink: #E1A9D0; /* Vaaleanpunainen, esimerkiksi painikkeet */
  --color-dark-pink: #A74E8B; /* Tumma pinkki */
  --color-cyan: #3A7D84; /* Sinivihreä */
  --color-pale-pink: #C2AFBB; /* Haalea vaaleanpunainen */

  /* Fontit */
  --font-family-primary: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
  --font-family-heading: "Roboto Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;

  /* Fonttikoot */
  --font-size-base: 16px;
  --font-size-small: 14px;
  --font-size-large: 20px;
  --font-size-xlarge: 24px;
}

body {
  margin: 0;
  display: flex;
  justify-items: center;

}

